--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="/pie-chart.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Finance Dashboard</title>
+    <title>Clarity Finance</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
